[package]
name = "btspeak-braille-terminal"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true

[dependencies]
bitflags = { version = "2.9.4", features = ["std"] }
bitvec = "1.0.1"
hid = { git = "https://github.com/emassey0135/hid-rs", version = "0.1.0" }
hut = "0.4.0"
prost = "0.14.1"
tokio = { version = "1.47.1", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
usb-gadget = "0.7.5"

[build-dependencies]
tonic-prost-build = "0.14.2"
